<resources>
    <string name="app_name">List It!</string>
    <string name="itemname">Enter an item</string>
    <string name="add">Add</string>
    <string name="quantity">Qty</string>
    <string name="item">Item</string>
    <string name="newList">New</string>
    <string name="list_tab_name">List</string>
    <string name="list_set_tab_name">List Set</string>
    <string name="duplicate_list">Duplicate list name. Re-enter!</string>
    <string name="list_name_display">List Name</string>
    <string name="give_name">Enter a name</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="added_to_list">Added to the list</string>
    <string name="save_list">Save List</string>
    <string name="delete">Delete</string>
    <string name="sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="deleted">Deleted</string>
    <string name="date">date</string>
    <string name="add_button_toast">Enter an item name</string>
    <string name="new_list_toast">Enter a list name</string>
    <string name="edit_item">Edit Item</string>
    <string name="edit_list">Edit List</string>
   	<string name="invalid_qty_toast">Invalid quantity</string>
   	<string name="check_box">Check box</string>
    <string name="copyright">Copyright Ramya Machina, 2012. All rights Reserved. </string>
    <string name="itemEditHint">Item Name</string>
    <string name="qtyEditHint">Qty</string>
    <string name="saveListHint">Example: Grocery list</string>
</resources>