<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:id="@+id/edit_dialog_root">
    <TextView 
    android:layout_alignParentLeft="true" 
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content" 
    android:id="@+id/itemtextView" 
    android:text="@string/item"
    android:paddingRight="20dp"
    android:paddingTop="10dp"
    android:maxLength="50"
    android:gravity="center_horizontal">
    </TextView>
    <TextView 
    android:layout_width="wrap_content" 
    android:layout_height="wrap_content" 
    android:id="@+id/qtyTextView" 
    android:layout_below="@+id/itemEditText"
    android:layout_alignParentLeft="true"
    android:text="@string/quantity"
    android:paddingRight="21dip"
    android:paddingTop="10dp"
    android:maxLength="5"
    android:gravity="center_horizontal">
    </TextView>
    <AutoCompleteTextView 
    android:layout_width="fill_parent"
    android:layout_height="wrap_content" 
    android:id="@+id/itemEditText"
    android:layout_toRightOf="@+id/itemtextView"
    android:inputType="text"
    android:lines="1"
    android:maxLength="50"
    android:maxLines="1"
    android:minLines="1"
    android:hint="@string/itemEditHint"
    android:typeface="normal">
    </AutoCompleteTextView>
    <EditText  
    android:layout_width="wrap_content"
    android:layout_height="wrap_content" 
    android:id="@+id/qtyEditText"
    android:layout_toRightOf="@+id/qtyTextView"
    android:layout_below="@+id/itemEditText"
    android:layout_alignLeft="@+id/itemEditText"
    android:maxLength="6" 
    android:singleLine="true"
    android:paddingRight="100dp"
    android:hint="@string/qtyEditHint"
    android:inputType="numberDecimal"
    >
    </EditText>
</RelativeLayout>
