<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/bg" >

<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TabWidget
        android:id="@android:id/tabs"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <FrameLayout
        android:id="@android:id/tabcontent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@android:id/tabs" >

        <RelativeLayout
            android:id="@+id/first_content"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="bottom" >

            <RelativeLayout
                android:id="@+id/shoppingListLayout"
                style="0"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:tileMode="repeat" >

                <TextView
                    android:id="@+id/textViewQty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginRight="72dp"
                    android:gravity="center"
                    android:text="@string/quantity"
                    android:textColor="@color/fg" />

                <TextView
                    android:id="@+id/textViewItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginRight="96dp"
                    android:layout_toLeftOf="@+id/textViewQty"
                    android:gravity="center"
                    android:text="@string/item"
                    android:textColor="@color/fg" />
            </RelativeLayout>

            <ListView
                android:id="@+id/itemListView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/textViewFooter"
                android:layout_below="@+id/editTextItem"
                android:cacheColorHint="#00000000"
                android:scrollbars="vertical" >
            </ListView>

            <TextView
                android:id="@+id/textViewFooter"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:clickable="false"
                android:gravity="bottom"
                android:paddingLeft="5dp"
                android:text="@string/copyright"
                android:textColor="@color/darkgrey"
                android:textSize="12sp" />

            <EditText
                android:id="@+id/editTextItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_marginTop="21dp"
                android:ems="10"
                android:inputType="text"
                android:lines="1"
                android:maxLength="50"
                android:maxLines="1"
                android:minLines="1"
                android:textSize="10sp"
                android:typeface="normal" />

            <EditText
                android:id="@+id/editTextQty"
                android:layout_width="@dimen/width_qty_editor"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/editTextItem"
                android:layout_alignBottom="@+id/editTextItem"
                android:layout_marginLeft="36dp"
                android:layout_toRightOf="@+id/editTextItem"
                android:ems="10"
                android:inputType="numberDecimal"
                android:maxLength="4"
                android:paddingRight="10dp"
                android:textSize="10sp" />

            <Button
                android:id="@+id/buttonAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@+id/editTextQty"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:layout_toRightOf="@+id/editTextQty"
                android:background="@drawable/ic_button_add" />

            <Button
                android:id="@+id/buttonNew"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/itemListView"
                android:layout_alignParentLeft="true"
                android:background="@drawable/ic_button_new"
                android:gravity="center"
                android:text="@string/newList" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/second_content"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
             >

            <ListView
                android:id="@+id/savedListView"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:gravity="top"
                android:scrollbars="vertical" 
                android:cacheColorHint="#00000000"
                android:layout_above="@+id/textFooterInSaveListView" >
            </ListView>
            
            <TextView
                android:id="@+id/textFooterInSaveListView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:gravity="bottom"
                android:text="@string/copyright"
                android:textColor="@color/darkgrey"
                android:paddingLeft="5dp"
                android:textSize="12sp" android:visibility="visible" android:clickable="false"/>
        </RelativeLayout>
    </FrameLayout>

    

</RelativeLayout>

</TabHost>

