<?xml version="1.0" encoding="utf-8"?>

<!-- Layout for Application Activity view (contains 2 tabs)  -->

<TabHost android:id="@android:id/tabhost"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@color/bg" xmlns:android="http://schemas.android.com/apk/res/android"
    >

<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <TabWidget
        android:id="@android:id/tabs"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        />

    <FrameLayout
        android:id="@android:id/tabcontent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@android:id/tabs" >
    
        <!--  First Tab Contents -->
        <RelativeLayout
            android:id="@+id/first_content"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:gravity="bottom" >
            
            <!--  Upper input bar -->

            <RelativeLayout
                android:id="@+id/shoppingListLayout"
                style="0"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:tileMode="repeat" >

                <!-- CURRENTLY ROW 1 IS NOT USED -->
                <!-- ROW 1 : All text labels -->
                
                <!-- NOTE: Here all the text labels align at the bottom to the "New" Text -->
                <!-- "New" and "Add" align to the edges of the screen but the other labels place between them -->
                
                <!-- Text Label: "New" -->
                <!-- 
                <TextView
                    android:id="@+id/TextView01"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:gravity="center"
                    android:paddingLeft="7dp"
                    android:paddingRight="7dp"
                    android:text="@string/newList"
                    android:textColor="@color/fg"
                    android:textStyle="bold" />
                -->
                <!-- Text Label: "Item" -->
                <!-- 
                <TextView
                    android:id="@+id/textViewItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    
                    android:layout_toRightOf="@+id/TextView01"
                    android:layout_alignLeft="@+id/editTextItem"
                    android:layout_alignRight="@+id/editTextItem"
                    android:layout_alignBottom="@+id/TextView01"
                    android:layout_alignParentTop="true"
                    
                    android:gravity="center"
                    android:text="@string/item"
                    android:textColor="@color/fg"
                    android:textStyle="bold" />
                 -->
                <!-- Text Label: "Qty" -->
                <!-- 
                <TextView
                    android:id="@+id/textViewQty"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    
                    android:layout_toRightOf="@+id/textViewItem"
                    android:layout_toLeftOf="@+id/addText"
                    android:layout_alignLeft="@+id/editTextQty"
                    android:layout_alignRight="@+id/editTextQty"
                    android:layout_alignBottom="@+id/TextView01"
                    android:layout_alignParentTop="true"
                    
                    android:gravity="center"
                    android:text="@string/quantity"
                    android:textColor="@color/fg"
                    android:textStyle="bold" />
                 -->
                <!-- Text Label: "Add" -->
                <!-- 
                <TextView
                    android:id="@+id/addText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    
                    android:layout_alignParentRight="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignBottom="@+id/TextView01"
                    
                    android:gravity="center"
                    android:paddingLeft="9dp"
                    android:paddingRight="9dp"
                    android:text="@string/add"
                    android:textColor="@color/fg"
                    android:textStyle="bold" />
                 -->
                 
                <!-- ROW 2 : Button; AutoComplete; NumberEditor; Button -->
                <!-- NOTE: Here the buttons are below the text labels and their top and bottom 
                     SHOULD align to the editor boxes. (Because editor boxes should take whatever
                     space they need). All the controls are below their corresponding labels. -->
                
                <!-- Button: "New List" -->
                
                <Button
                    android:id="@+id/buttonNew"
                    android:layout_width="45dp"
                    android:layout_height="wrap_content"
                    android:layout_alignBottom="@+id/editTextItem"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:layout_alignTop="@+id/editTextItem"
                    android:background="@drawable/ic_button_new"
                     />
                
                <!-- AutoComplete Text Editor -->
                
                <AutoCompleteTextView
                    android:id="@+id/editTextItem"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_toLeftOf="@+id/editTextQty"
                    android:layout_toRightOf="@+id/buttonNew"
                    android:ems="10"
                    android:hint="@string/itemEditHint"
                    android:imeOptions="actionNext"
                    android:inputType="text"
                    android:lines="1"
                    android:maxLength="50"
                    android:maxLines="1"
                    android:minLines="1"
                    android:typeface="normal" >
                    
                </AutoCompleteTextView>
                
                <!-- Number Editor -->
                
                <EditText
                    android:id="@+id/editTextQty"
                    android:layout_width="@dimen/width_qty_editor"
                    android:layout_height="wrap_content"
                    
                    android:layout_toLeftOf="@+id/buttonAdd"
                    android:layout_alignBottom="@+id/editTextItem"
                    android:layout_alignTop="@+id/editTextItem"
                    
                    android:hint="@string/qtyEditHint"
                    android:ems="10"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal"
                    android:maxLength="6" />
                
                <!-- Button: "Add Item" -->
                <!-- Note add button should align left to the above text label. -->
                
                <Button
                    android:id="@+id/buttonAdd"
                    android:layout_width="45dp"
                    android:layout_height="wrap_content"
                    
                    android:layout_alignBottom="@+id/editTextQty"
                    android:layout_alignParentRight="true"
                    android:layout_alignTop="@+id/editTextQty"
                    
                    android:background="@drawable/ic_button_add"
                    android:padding="9dp" />

            </RelativeLayout>
            
            <!-- Touchlist view for grabber icon -->
            
            <com.android.listit.TouchListView
            	xmlns:tlv="http://schemas.android.com/apk/res/com.android.listit"
                android:id="@+id/itemListView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/textViewFooter"
                android:layout_below="@+id/shoppingListLayout"
                android:cacheColorHint="#00000000"
                android:scrollbars="vertical" 
                android:clickable="true"
                android:focusable="false"               
				tlv:grabber="@+id/icon"
				/> 
				
				<!-- tlv:remove_mode="slideRight"
				 tlv:normal_height="64dip"
  				tlv:expanded_height="128dip" -->   
  				        
  		    <!-- Footer Text for Copyright -->
  		    
            <TextView
                android:id="@+id/textViewFooter"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:clickable="false"
                android:gravity="bottom"
                android:paddingLeft="5dp"
                android:text="@string/copyright"
                android:textColor="@color/darkgrey"
                android:textSize="12sp" />
            
        </RelativeLayout>
        
        <!--  Second Tab Contents -->
        <RelativeLayout
            android:id="@+id/second_content"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
             >

            <!-- Touchlist view for grabber icon -->
            
            <com.android.listit.TouchListView
				xmlns:tlv="http://schemas.android.com/apk/res/com.android.listit"
				android:id="@+id/savedListView"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_alignParentTop="true"
				android:scrollbars="vertical" 
				android:cacheColorHint="#00000000"
				android:layout_above="@+id/textFooterInSaveListView"
				tlv:grabber="@+id/icon2"/>
            
            <!-- Footer Text for Copyright -->
            
            <TextView
                android:id="@+id/textFooterInSaveListView"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentLeft="true"
                android:gravity="bottom"
                android:text="@string/copyright"
                android:textColor="@color/darkgrey"
                android:paddingLeft="5dp"
                android:textSize="12sp" android:visibility="visible" android:clickable="false"/>
            
        </RelativeLayout>
        
    </FrameLayout>
    </RelativeLayout>
    
</TabHost>
